@@ -8,10 +8,11 @@ javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -c
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/entity/map/GameMap.java
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/menu/scores/ScoresController.java
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/menu/scores/Net.java
+javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/entity/entity/enemy/Ghost.java
+javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/entity/entity/points/Point.java
+javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/menu/death/DeathController.java
 
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/Main.java
 
 
 java --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" Main
-
-pause
